opensource/redis/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    name: redis-port
    port: 6379
    targetPort: 6379
  type: LoadBalancer
